@@ -1,5 +1,7 @@
 Revision history for Perl extension Business::PayPal.
 
+
+    - Added new cert as returned by PayPal.
     - report error when no cert found
       http://www.cpantesters.org/cpan/report/4f7dbbb4-02e1-11e2-8e23-9a24f233959e
 
